--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Priya Haridas Kotnis | Fashion | Beauty | Lifestyle</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" type="image/x-icon" href="/logo.ico" />
+  <link rel="icon" type="image/x-icon" href="register.ico">
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700|Playfair+Display:400,700,900" rel="stylesheet">
   <style>
     #loading {
@@ -19,25 +19,37 @@
     }
     .loading-image {
       position: absolute;
-      top: 50%;
+      top: 30%;
       z-index:1001;
-      left: 50%;
-      width: 120px;
+      left: 34%;
+      width: 500px;
       height: auto;
       margin:-60px 0 0 -60px;
-      -webkit-animation:spin 2s linear infinite;
-      -moz-animation:spin 2s linear infinite;
-      animation:spin 2s linear infinite;
+    }
+    .text-loading{
+      text-align: center;
+      color:#05BBEF;
+      font-size:30px;
+      font-family: League-Gothic;
+      font-weight: bold;
+    }
+    @media screen and (max-width: 500px) {
+      .loading-image{
+        left: 10%;
+        width: 400px;
+        padding: 10%;
+        top: 50%;
+      }    
     }
   </style>
 </head>
 <body> 
   <app-root>
-    <div id="loading">
-      <img class="loading-image" src="./assets/images/2097024.gif"  alt="Loading..." />
-      <br><br><br><br>
-       <p style="text-align: center; color:#05BBEF; font-size:25px;" >Priya Haridas Kotnis Blog Loading..</p>
-    </div>
+      <div id="loading">
+          <img class="loading-image" src="./assets/images/2097024.gif"  alt="Loading..."/>
+          <br><br><br><br>
+          <p class="text-loading" >Priya Haridas Kotnis Blog Loading....</p>
+      </div>
   </app-root>
 </body>
 </html>
