-Added new images -Added image compress module

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 <body> 
   <app-root>
       <div id="loading">
-          <img class="loading-image" src="./assets/images/2097024.gif"  alt="Loading..."/>
+          <img class="loading-image" src="./assets/images_data/loading.gif"  alt="Loading..."/>
           <br><br><br><br>
           <p class="text-loading" >Priya Haridas Kotnis Blog Loading....</p>
       </div>
