-Favicon icon done. -Message displayed when loading data

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Priya Haridas Kotnis | Fashion | Beauty | Lifestyle</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="register.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/_favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700|Playfair+Display:400,700,900" rel="stylesheet">
   <style>
     #loading {
