--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,17 @@
         top: 50%;
       }    
     }
+    @media screen and (max-width: 800px){
+      .loading-image {
+        position: absolute;
+        top: 30%;
+        z-index:1001;
+        left: 25%;
+        width: 500px;
+        height: auto;
+        margin:-60px 0 0 -60px;
+      } 
+    }
   </style>
 </head>
 <body> 
