--- a/src/index.html
+++ b/src/index.html
@@ -33,14 +33,14 @@
       font-family: League-Gothic;
       font-weight: bold;
     }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 500px) and (min-width:300px){
       .loading-image{
-        left: 0%;
-        width: 200px;
-        top: 60%;
-      }    
+        left: 15%;
+        width: 400px;
+        top: 40%;
+      }
     }
-    @media screen and (max-width: 800px){
+    @media screen and (max-width: 800px) and (min-width:501px){
       .loading-image {
         position: absolute;
         top: 30%;
@@ -49,7 +49,19 @@
         width: 500px;
         height: auto;
         margin:-60px 0 0 -60px;
-      } 
+      }
+    }
+
+    @media screen and (max-width: 1100px) and (min-width:801px){
+      .loading-image {
+        position: absolute;
+        top: 30%;
+        z-index:1001;
+        left: 25%;
+        width: 500px;
+        height: auto;
+        margin:-60px 0 0 -60px;
+      }
     }
   </style>
 </head>
